<resources>
    <string name="app_name">Gotham</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_occurrences">Ocorrências</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_configuration">Configurações</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_separator">Mais</string>

    <string name="title_activity_maps"></string>

    <!-- Erros -->
    <string name="error">Ops, algo deu errado. Verifique a sua conexão com Internet.</string>

    <!-- Exception -->
    <string name="ex_user_register_name">Nome inválido!</string>
    <string name="ex_user_register_email">E-mail inválido!</string>
    <string name="ex_user_register_password">Senha inválida!</string>
    <string name="ex_user_register_password_conf">Confirme sua senha!</string>
    <string name="ex_user_register_password_size">Senha com no mínimo 6 caracteres!</string>
    <string name="ex_user_register_password_validate">As senhas não coincidem!</string>

    <!-- Firebase Exception -->
    <string name="firebase_register_pass">Digite uma senha mais forte!</string>
    <string name="firebase_register_email">Por favor, digite um e-mail válido!</string>
    <string name="firebase_register_acount">Esta conta já está cadastrada!</string>

    <!-- Alert -->
    <string name="alert_error_register_title">Erro ao cadastrar</string>
    <string name="alert_error_update_title">Erro ao realizar alteração</string>
    <string name="alert_error_login_title">Erro ao acessar</string>
    <string name="alert_sucess_register_title">Sucesso</string>
    <string name="alert_sucess_register_dec">Cadastro efetuado com sucesso!</string>
    <string name="alert_sucess_register_update">Alteração efetuada com sucesso!</string>
    <string name="alert_neutral_button">OK</string>

    <!-- Alert Permission -->
    <string name="alert_permission_title">Permissões negadas</string>
    <string name="alert_permission_desc">Para continuar utilizando o App é necessário aceitar as permissões</string>
    <string name="alert_confirm_button">Ok</string>

    <!-- Activity Access -->
    <string name="access_tittle">Crie uma conta grátis</string>
    <string name="access_description">Junte-se a nossa comunidade e ajude a nossa cidade ser mais segura.</string>
    <string name="access_register">Cadastre-se</string>
    <string name="access_have_acount">Já tenho uma conta</string>

    <!-- Activity Login -->
    <string name="login_email">E-mail</string>
    <string name="login_senha">Senha</string>
    <string name="login_access">Acessar</string>
    <string name="ex_login">Erro ao efetuar login!</string>
    <string name="ex_login_access">Usuário não cadastrado!</string>
    <string name="ex_login_auth">E-mail ou senha não correspondem a um usuário cadastrado!</string>

    <!-- Activity Register User -->
    <string name="user_register_title">Cadastro</string>
    <string name="user_register_name_desc">Insira seu nome</string>
    <string name="user_register_email_desc">Insira seu e-mail</string>
    <string name="user_register_pass_desc">Crie uma senha</string>
    <string name="user_register_pass_c_desc">Confirme sua senha</string>
    <string name="user_register_button_reg">Cadastrar</string>

    <!-- Logout -->
    <string name="logout_title">Aviso</string>
    <string name="logout_description">Quer sair do Gotham?</string>
    <string name="logout_button_yes">Sim</string>
    <string name="logout_button_no">Cancelar</string>

    <!-- Fragment Home -->
    <string name="home">Home</string>
    <string name="home_batman">O icone do Batman representa onde você está no mapa.</string>
    <string name="home_coringa">O coringa representa ocorrencias de assalto.</string>
    <string name="home_charada">O charada representa ocorrencias de elementos suspeitos.</string>
    <string name="home_button">Ir para o mapa</string>

    <!-- Fragment Obout -->
    <string name="about_title">Sobre</string>
    <string name="about_description">Aplicativo desenvolvido por alunos do curso de análise e desenvolvimento de sistemas da faculdade de Tecnologia SENAI Porto Alegre,
        na disciplina de programação de dispositivos móveis (2019/2).</string>

    <!-- Fragment Obout -->
    <string name="ocurrence_empty">Você ainda não registro nenhuma ocorrência</string>

    <!-- Fragment Configuation -->
    <string name="configuration_title">Alteração de cadastro</string>
    <string name="configuration_new_name">Novo nome</string>
    <string name="configuration_new_email">Novo endereço de email</string>
    <string name="configuration_new_password">Nova senha</string>
    <string name="configuration_conf_password">Confirme sua nova senha</string>
    <string name="configuration_save">Salvar</string>

    <!-- Alert Ocurrence -->
    <string name="alert_ocurrence_title">Nova Ocorrência</string>
    <string name="alert_ocurrence_button_regs">Cadastrar</string>
    <string name="alert_ocurrence_dec">Descrição</string>

    <!-- Alert Delete Ocurrence -->
    <string name="alert_del_ocu_title">Excluir Ocorrência</string>
    <string name="alert_del_ocu_desc">Tem certeza que deseja excluir definitivamente a ocorrência?</string>
    <string name="alert_del_ocu_button_ok">Sim</string>
    <string name="alert_del_ocu_button_cancel">Cancelar</string>

    <string-array name="alert_array">
        <item>Assalto</item>
        <item>Delito</item>
    </string-array>

</resources>
