<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ConfigurationFragment"
    android:background="@drawable/backgroung">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/roboto_light"
            android:textAlignment="textStart"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:text="@string/configuration_title" />

        <View
            android:id="@+id/divider"
            android:layout_width="40dp"
            android:layout_height="3dp"
            android:layout_gravity="left"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/textView"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textAlignment="textStart"
            android:text="@string/configuration_new_name" />

        <EditText
            android:id="@+id/editTextNewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/estilologin" />

        <TextView
            android:id="@+id/textView5"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="textStart"
            android:text="@string/configuration_new_email" />

        <EditText
            android:id="@+id/editTextNewEmail"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:hapticFeedbackEnabled="false"
            android:inputType="textWebEmailAddress|textEmailSubject"
            android:saveEnabled="false" />

        <TextView
            android:id="@+id/textView6"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/configuration_new_password" />

        <EditText
            android:id="@+id/editTextNewPassword"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="true"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView7"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/configuration_conf_password" />

        <EditText
            android:id="@+id/editTextNewPasswordConf"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonAlterRegister"
            style="@style/botaoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorAccent"
            android:text="@string/configuration_save"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</ScrollView>