<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@drawable/backgroung">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="40dp"
            android:fontFamily="@font/roboto_light"
            android:textAlignment="textStart"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/user_register_title" />

        <View
            android:id="@+id/divider"
            android:layout_width="40dp"
            android:layout_height="3dp"
            android:layout_gravity="left"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textAlignment="textStart"
            android:text="@string/user_register_email_desc" />

        <EditText
            android:id="@+id/cadastroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/estilologin" />

        <TextView
            android:id="@+id/textView6"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/user_register_pass_desc" />

        <EditText
            android:id="@+id/cadastroSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/estilologin"/>

        <TextView
            android:id="@+id/textView7"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/user_register_pass_c_desc" />

        <EditText
            android:id="@+id/cadastroConfSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/estilologin"/>

        <Button
            android:id="@+id/cadastroButtonCadastrar"
            style="@style/botaoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:text="@string/user_register_button_reg" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>