<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/backgroung">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageViewUserUrl"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="130dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textMenuUserEmail"
            style="@style/estilologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_email"/>

        <EditText
            android:id="@+id/editTextLoginEmail"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            style="@style/estilologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_senha" />

        <EditText
            android:id="@+id/editTextLoginPassaword"
            style="@style/estilologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLoginAcess"
            style="@style/botaoLogin"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/login_access"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>